--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,6 +3,14 @@
     height: 100vh;
 }
 
+.pageLogin h1{
+    font-size: 44px;
+}
+  
+.pageLogin  h2{
+    font-size: 34px;
+}
+
 .pageLogin > header{
     background-color: #fff;
     display: flex;
@@ -27,6 +35,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
 .pageLogin > main > div > p{
@@ -48,19 +57,47 @@
 .pageLogin .buttonLoginGoogle {
     color: #fff;
     background-color: #7A007A;
-    border: none;
+    border: 5px solid #7A007A;    
     border-radius: 16px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.30);
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px 20px;
-    font-size: 22px;
-    gap: 16px;
+    font-size: 18px;
+    gap: 8px;
     cursor: pointer;
     transition: .5s ease-in-out;
 }
 
 .pageLogin .buttonLoginGoogle:hover {
-    background-color: #381750;
+    color: #7A007A;
+    background-color: #fff;
+}
+
+/* Responsive */
+@media(max-width: 767px){
+    .pageLogin h1{
+        font-size: 28px;
+    }
+    
+    .pageLogin  h2{
+        font-size: 20px;
+    }
+    
+    .pageLogin > main > div > p{
+        font-size: 16px;
+    }
+    
+    .pageLogin .cto{
+        font-size: 14px;
+        margin-bottom: 44px;
+    }
+    
+    .pageLogin .buttonLoginGoogle {
+        padding: 5px 10px;
+        font-size: 16px;
+    }
+
+
 }
