--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -3,14 +3,6 @@
     height: 100vh;
 }
 
-.pageLogin h1{
-    font-size: 44px;
-}
-  
-.pageLogin  h2{
-    font-size: 34px;
-}
-
 .pageLogin > header{
     background-color: #fff;
     display: flex;
@@ -77,14 +69,10 @@
 
 /* Responsive */
 @media(max-width: 767px){
-    .pageLogin h1{
-        font-size: 28px;
+    .pageLogin > main{
+        padding: 0px 24px;
     }
-    
-    .pageLogin  h2{
-        font-size: 20px;
-    }
-    
+
     .pageLogin > main > div > p{
         font-size: 16px;
     }
@@ -98,6 +86,4 @@
         padding: 5px 10px;
         font-size: 16px;
     }
-
-
 }
